--- a/application.yaml
+++ b/application.yaml
@@ -8,7 +8,7 @@ spec:
 
   source:
     repoURL: https://github.com/ataur2050/Flask.git
-    targetRevision: HEAD
+    targetRevision: master
     path: .
   destination: 
     server: https://kubernetes.default.svc
